tests/functional/data/transpiler/common/errors/barrier/applied_to_non_null_stmt.err
applied_to_non_null_stmt.cpp:6:13: error: 'barrier' attribute only applies to empty statement
    6 |             @barrier for (int k = 0; k < 10; ++k) {
      |             ^
